# xd-financial-reports

./: .gitignore  README.md  pyproject.toml  requirements.txt  xd_financial.db-shm  xd_financial.db-wal
reports/: analysis_by_llm.md
src/xd_financial_datas/: xd_balance_report.sql  xd_core_financial_report.sql  xd_core_operational_report.sql  xd_expense_report.sql  xd_revenue_game_report.sql  xd_revenue_report.sql
src/xd_financial_reports/: __init__.py  __main__.py
src/xd_financial_reports/api/: __init__.py  app.py
src/xd_financial_reports/api/routers/: __init__.py  balance_report.py  core_financial_report.py  core_operational_report.py  expense_report.py  revenue_game_report.py  revenue_report.py
src/xd_financial_reports/dao/: __init__.py  base_dao.py  manager.py  xd_balance_report_dao.py  xd_core_financial_report_dao.py  xd_core_operational_report_dao.py  xd_expense_report_dao.py  xd_revenue_game_report_dao.py  xd_revenue_report_dao.py
src/xd_financial_reports/db/: __init__.py  connection.py  init_db.py
